--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -1,16 +1,33 @@
 .profile-page {
+  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 400px;
-  height: 300px;
   margin: 0 auto;
   margin-top: 100px;
-  .file-upload {
+  .file-upload-wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+    position: relative;
     display: flex;
     flex-direction: row;
     padding-left: 10px;
+      .file-upload {
+        width: 80px;
+        overflow: hidden;
+        .file-input {
+          position: absolute;
+          opacity: 0;
+          z-index: 1;
+        }
+      .add-file-btn {
+        position: absolute;
+        z-index: 0;
+        pointer-events: none;
+      }
+    }
   }
   .preview-error {
     margin-top: 30px;
@@ -22,12 +39,13 @@
     align-items: center;
     justify-content: center;
     margin-top: 30px; 
-    outline: 3px #999 solid;
     height: 100%;
     width: 100%;
+    overflow: hidden;
     .preview-image {
-      width: 100%;
-      height: 100%;
+      object-fit: cover;
+      max-width: 100%;
+      max-height: 100%;
     }
     .preview-text {
       color: #999;
